added nickname, suffix, prefix, better de-duping
